make ports non-static